2007-07-20  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/faxg3/faxg3.c (query): changed the magic string to
	"Research" starting at offset 4 (this also matches the longer
	string "PC Research, Inc" starting at offset 1).  Addresses a part
	of bug #445559.

2007-07-19  Sven Neumann  <sven@gimp.org>

	Applied patch from Stefan attached to bug #387604:

	* plug-ins/print/Makefile.am
	* plug-ins/print/print-preview.[ch]: new files implementing a
	print preview similar to GimpOffsetArea.

	* plug-ins/print/print.[ch]
	* plug-ins/print/print-page-layout.c
	* plug-ins/print/print-settings.c: adds GUI to adjust the offsets.

2007-07-19  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage.[ch]: renamed gimp_image_active_drawable() to
	gimp_image_get_active_drawable().

	* app/[lots of files]
	* tools/pdbgen/pdb/paths.pdb
	* tools/pdbgen/pdb/image.pdb: changed accordingly.

2007-07-19  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpcolortool.c (gimp_color_tool_draw): chain up.

2007-07-18  Sven Neumann  <sven@gimp.org>

	* app/pdb/gimpprocedure.[ch] (gimp_procedure_set_strings): added
	const qualifiers.

2007-07-17  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/sample-funcs.c: unified subsampling code.

2007-07-17  Sven Neumann  <sven@gimp.org>

	* app/paint-funcs/Makefile.am
	* app/paint-funcs/scale-funcs.[ch]
	* app/paint-funcs/sample-funcs.[ch]: moved subsample_region() to
	new file and also moved subsample_indexed_region() there.

	* app/base/tile-manager-preview.c
	* app/core/gimpdrawable-preview.c: changed accordingly.

2007-07-17  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpeg.c
	* plug-ins/jpeg/jpeg-load.c: Removed obsolete libjpeg error
	manager that was disabling the loading of EXIF data.

2007-07-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-load.c (load_image): fixed build for
	HAVE_EXIF being undefined.

2007-07-17  Sven Neumann  <sven@gimp.org>

	* app/base/tile-manager-preview.[ch]: added
	tile_manager_get_sub_preview().
